# cluster-pose-estimation

./: README.md  configure.sh  darknet_modify.txt  requirements.sh
avt_vimba_camera/: CMakeLists.txt  package.xml  tags
avt_vimba_camera/config/: params.yaml
avt_vimba_camera/include/VimbaCPP/Include/: Interface.hpp:Zone.Identifier
avt_vimba_camera/include/avt_vimba_camera/: mono_camera_node.hpp
avt_vimba_camera/include/imageselection/: imageselection.cpp  imageselection.hpp
avt_vimba_camera/include/poseestimation/: node_posenet.cpp  node_posenet.hpp  ros_compat.cpp  ros_compat.h
avt_vimba_camera/launch/: computing_node.launch.py  mono_camera.launch.xml
avt_vimba_camera/src/: avt_vimba_camera.cpp  mono_camera_node.cpp
avt_vimba_camera/src/exec/: mono_camera_exec.cpp
